--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 # Database Configuration
 # For Neon DB, use the connection pooler URL with SSL
-DATABASE_URL=postgresql://neondb_owner:npg_Bq6i5VAfpGCz@ep-dawn-butterfly-a1y95rqd-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
+DATABASE_URL=postgresql://neondb_owner:npg_fgl6xOo9IDLt@ep-dawn-butterfly-a1y95rqd-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 
 # PostgreSQL Connection Details (parsed from DATABASE_URL)
 PORT=3000
 PGHOST=ep-dawn-butterfly-a1y95rqd-pooler.ap-southeast-1.aws.neon.tech
 PGPORT=5432
 PGUSER=neondb_owner
-PGPASSWORD=npg_Bq6i5VAfpGCz
+PGPASSWORD=npg_fgl6xOo9IDLt
 PGDATABASE=neondb
 PGSSLMODE=require
 
