--- a/.env
+++ b/.env
@@ -35,9 +35,14 @@ CLOUDINARY_API_SECRET=your-api-secret-here
 CLOUDINARY_UPLOAD_PRESET=creatorlink-videos
 CLOUDINARY_FOLDER=creatorlink/videos
 
+VAPID_PUBLIC_KEY=BO5Zo_8gC2TkLCf-6N0j6U_ynHI5yj3MhHxp8LCZ-6RUe5Uv9ERrV5Z4CEsRKpDT74UdW78w4-1M53uE7Q_J0wY
+VAPID_PRIVATE_KEY=uOY0_JYYOtFIcqaIqWcFGfmR-JOwcfbfYuCgP_BkDns
+VAPID_SUBJECT=mailto:notifications@affiliatemarketplace.com
+
 # Note: 
 # 1. Copy this file to .env
 # 2. Fill in your actual Neon DB credentials above
 # 3. Generate a strong SESSION_SECRET
 # 4. Never commit .env to version control!
+
 # 5. For Neon DB, always use the pooler URL (-pooler suffix) for serverless/connection pooling
