--- a/.env
+++ b/.env
@@ -39,6 +39,12 @@ VAPID_PUBLIC_KEY=BO5Zo_8gC2TkLCf-6N0j6U_ynHI5yj3MhHxp8LCZ-6RUe5Uv9ERrV5Z4CEsRKpD
 VAPID_PRIVATE_KEY=uOY0_JYYOtFIcqaIqWcFGfmR-JOwcfbfYuCgP_BkDns
 VAPID_SUBJECT=mailto:notifications@affiliatemarketplace.com
 
+
+SENDGRID_API_KEY=SG.your_sendgrid_api_key_here
+
+# Optional: Configure sender email
+SENDGRID_FROM_EMAIL=notifications@yourdomain.com
+SENDGRID_FROM_NAME=CreatorLink Notifications
 # Note: 
 # 1. Copy this file to .env
 # 2. Fill in your actual Neon DB credentials above
