commited all chnages

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 # Database Configuration
 # On Replit, use DATABASE_URL from secrets. For local development:
-DATABASE_URL=postgresql://user:password@localhost:5432/creatorlink
+DATABASE_URL=postgresql://user:password@localhost:5432/affiliatexchange
 
 # PostgreSQL Connection Details (auto-populated by Replit)
 PGHOST=localhost
 PGPORT=5432
 PGUSER=postgres
 PGPASSWORD=your-password
-PGDATABASE=creatorlink
+PGDATABASE=affiliatexchange
 
 # Session Secret (REQUIRED - generate a random string)
 SESSION_SECRET=your-random-secret-key-change-this-in-production
@@ -35,7 +35,7 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 CLOUDINARY_CLOUD_NAME=your-cloud-name-here
 CLOUDINARY_API_KEY=your-api-key-here
 CLOUDINARY_API_SECRET=your-api-secret-here
-CLOUDINARY_FOLDER=creatorlink/videos
+CLOUDINARY_FOLDER=affiliatexchange/videos
 
 # Email Notifications (SendGrid - optional but recommended)
 # Sign up at https://sendgrid.com to get an API key
