--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "cross-env NODE_ENV=development NODE_NO_WARNINGS=1 tsx watch --clear-screen=false server/index.ts",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "payment:seed": "tsx --env-file=.env scripts/seed-payment-data.ts",
+    "payment:test": "tsx --env-file=.env scripts/test-payment-system.ts"
   },
   "dependencies": {
     "@google-cloud/storage": "^7.17.2",
